linux_foundation/data/lab11_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-ingrss
  namespace: default
spec:
  rules:
  - host: www.home-one.com
    http:
      paths:
      - backend:
          service:
            name: web-two
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
